[tool.poetry]
name = "g4a-playground"
version = "0.1.0"
description = "G4A Playground - A simple static HTML website"
authors = ["andreas.adlichhammer@aahammer.eu"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

# Optional: Add Python dependencies only if you need them for static site generation
# For pure static HTML, no dependencies are needed
# Uncomment the following if you want to add a simple HTTP server for development:
# python-http-server = "^0.1.0"  # Example - not a real package

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black = "^24.4"
ruff = "^0.4"
build = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']
